# plant_weights

./: parse_plants.py  plants.csv  pyproject.toml  removed_plants.csv
