[tool.poetry]
name = "plant_weights"
version = "0.1.0"
description = ""
authors = ["jakkdl <11260241+jakkdl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = ["missing-class-docstring", "missing-function-docstring"]
